--- a/webpaser/res/values/strings.xml
+++ b/webpaser/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="title_section3">Section 3</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share your link</string>
+    <string name="action_websearch">Search</string>
+    <string name="action_comment">Comment in Disqus</string>
+    <string name="action_fullversion">See the full version</string>
 
 </resources>
